--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = najlepszy_vet_warszawa
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.najlepszyVetWarszawa
+PRODUCT_BUNDLE_IDENTIFIER = com.aduzja.najlepszyVetWarszawa
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2023 com.aduzja. All rights reserved.
