--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "com.aduzja" "\0"
             VALUE "FileDescription", "najlepszy_vet_warszawa" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "najlepszy_vet_warszawa" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 com.aduzja. All rights reserved." "\0"
             VALUE "OriginalFilename", "najlepszy_vet_warszawa.exe" "\0"
             VALUE "ProductName", "najlepszy_vet_warszawa" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
